--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
 
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> </script>
 </head>
